--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,4 +1,4 @@
-<%= render '/shared/header' %> 
+<%= render '/shared/header' %>
 
 <p id="notice"><%= notice %></p>
 
@@ -38,6 +38,7 @@
           <% @subjects.in_groups_of(5).each do |subject_group| %>
             <div class="row">
             <% subject_group.each do |subject| %>
+              <% next if subject.nil? %>
               <div class="col-md-2">
                 <%= link_to(subject, {class: "thumbnail"}) do %>
                   <h3><%= subject.name %></h3>
@@ -46,7 +47,7 @@
             <% end %>
             </div>
           <% end %>
-          
+
       </div>
     </div>
 
@@ -64,7 +65,7 @@
               <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
                 <span class="sr-only">40% Complete (success)</span>
               </div>
-            </div>                
+            </div>
           </div>
 
           <div class="col-xs-1">
@@ -89,4 +90,4 @@
 
 
 
-<%= render '/shared/footer' %> 
+<%= render '/shared/footer' %>
