--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -110,45 +110,43 @@
 
     <div class="popular">
       <div class="container">
-        <% @projects.in_groups_of(3).each do |projects_group| %>
           <div class="row">
-            <% projects_group.each do |project| %>
-              <% next unless project %>
-              <div class="col-sm-4">
-                <div class="thumbnail">
-                  <img src="<%= project.image %>">
-                  <div class="caption">
-                    <h3 class="title"><%= project.title %></h3>
-                    <p class="author"><%= project.creator %></p>
-                    <p class="description"><% project.description %></p>
+          <% @projects[0..2].each do |project| %>
+            <% next unless project %>
+            <div class="col-sm-4">
+              <div class="thumbnail">
+                <img src="<%= project.image %>">
+                <div class="caption">
+                  <h3 class="title"><%= project.title %></h3>
+                  <p class="author"><%= project.creator %></p>
+                  <p class="description"><% project.description %></p>
 
-                    <div class="progress">
-                    <% progress = (first.total / first.goal).to_i %>
-                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= progress %>%">
-                        <span class="sr-only"><%= progress %>% Complete (success)</span>
-                      </div>
+                  <div class="progress">
+                  <% progress = (first.total / first.goal).to_i %>
+                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= progress %>%">
+                      <span class="sr-only"><%= progress %>% Complete (success)</span>
                     </div>
+                  </div>
 
-                    <div class="row">
-                      <div class="col-xs-3">
-                        <h4><%= progress %>%</h4>
-                        <h5>funded</h5>
-                      </div>
-                      <div class="col-xs-3">
-                        <h4>$<%= project.total %></h4>
-                        <h5>pledged</h5>
-                      </div>
-                      <div class="col-xs-3">
-                        <h4><%= distance_of_time_in_words(Time.now, Time.now + 30.days) %></h4>
-                        <h5>days to go</h5>
-                      </div>
+                  <div class="row">
+                    <div class="col-xs-3">
+                      <h4><%= progress %>%</h4>
+                      <h5>funded</h5>
+                    </div>
+                    <div class="col-xs-3">
+                      <h4>$<%= project.total %></h4>
+                      <h5>pledged</h5>
+                    </div>
+                    <div class="col-xs-3">
+                      <h4><%= distance_of_time_in_words(Time.now, Time.now + 30.days) %></h4>
+                      <h5>days to go</h5>
                     </div>
                   </div>
                 </div>
               </div>
-            <% end %>
+            </div>
+          <% end %>
           </div>
-        <% end %>
       </div>
     </div>
     <div class="promo">
