--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <!-- Header -->
 
+
 <html>
   <head>
     <link href="css/bootstrap.css" rel='stylesheet'>
@@ -9,7 +10,7 @@
     <div class="header">
       <div class="container">
         <div class="col-md-2">
-          <img src="img/logo.png" width="161px">
+          <%= image_tag "logo.png", size: "161x20" %>
         </div>
         <div class="col-md-3">
           <ul class="primary">
@@ -18,22 +19,10 @@
           </ul>
         </div>
         <div class="pull-right">
-          <ul>
-          <% if current_user %>
-          Signed in as <strong> <%= current_user.name %></strong>
-          </ul>
-          <ul> 
-            <li><%= link_to "Logout", '/logout' %></a></li>
-          </ul>
-          <% else %> 
-          <ul>
-            <li><%= link_to "Login", '/login' %></a></li>
-            <li><%= link_to "Signup", '/signup' %></a></li>
-          <% end %> 
-          </ul>
         </div>
       </div>
     </div>
+
 
 <!-- Header -->
 
